--- a/assets/css/admin/manage_departments_styles.css
+++ b/assets/css/admin/manage_departments_styles.css
@@ -1,7 +1,7 @@
 <style>
 
 /* ============================================
-   STANDARD ADMIN PAGE LAYOUT - v1.0
+   STANDARD ADMIN PAGE LAYOUT 
    ============================================ */
 * {
     margin: 0;
